# mroonga

./: .clang-format  .dir-locals.el  .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  CMakeLists.txt  CMakePresets.json  Makefile.am  README  Rakefile  Vagrantfile  appveyor.yml  autogen.sh  config.sh.in  configure.ac  driver.c  driver.h  ha_groonga.cc  ha_groonga.h  ha_mroonga.cc  ha_mroonga.cpp  ha_mroonga.def  ha_mroonga.h  ha_mroonga.hpp  mrn.hpp  mrn_constants.hpp  mrn_err.h  mrn_macro.h  mrn_macro.hpp  mrn_mysql.h  mrn_mysql_compat.h  mrn_sys.c  mrn_sys.cpp  mrn_sys.h  mrn_sys.hpp  mrn_table.cc  mrn_table.cpp  mrn_table.h  mrn_table.hpp  (+13 more)
data/: Makefile.am  install.sql.in  install_plugin.sql.in  uninstall.sql  update.sql.in
data/deb/: Makefile.am  postinst.sh  postinst.sh.in  prerm.sh
data/rpm/: Makefile.am  post.sh  preun.sh
doc/: .gitignore  CMakeLists.txt  Gemfile  Makefile.am  create-announcement-article.rb  deploy.rb  files.am  files.cmake  images.mk  requirements.txt  update-edit-po.rb  update-files.rb  update-files.sh  update-po.rb
doc/en/: Makefile.am  sphinx2github.sh
doc/en/source/: characteristic.rst  conf.py  developer.rst  index.rst  install.rst  news.rst  reference.rst
doc/en/source/developer/: debug.rst  release.rst
doc/en/source/userguide/: storage.rst  wrapper.rst
doc/ja/: Makefile  Makefile.am  make.bat  sphinx2github.sh
doc/ja/source/: characteristic.rst  conf.py  developer.rst  index.rst  index.txt  install-src  install.rst  news.rst  reference.rst  userguide.rst
doc/ja/source/developer/: debug.rst  release.rst
doc/locale/ja/: Makefile.am
doc/source/: characteristic.rst  community.rst  conf.py  contribution.rst  developer.rst  faq.rst  index.rst  install.rst  news.rst  reference.rst  tutorial.rst  upgrade.rst  userguide.rst
doc/source/_static/: switcher.json
doc/source/contribution/: documentation.md  documentation.rst  report.rst
doc/source/developer/: coding_style.rst  debug.md  debug.rst  package_maintenance.rst  release.rst
doc/source/faq/: mmap_cannot_allocate_memory.rst  too_many_mmap_calls.rst
doc/source/install/: 32bit-note.inc  almalinux.rst  amazon-linux.rst  centos.md  centos.rst  debian.rst  docker.rst  fedora.rst  macos.rst  oracle-linux.rst  os_x.rst  others.md  others.rst  ubuntu.rst  windows.rst
doc/source/news/: 0.rst  0.x.rst  1.rst  1.x.rst  10.rst  11.rst  12.rst  13.md  14.md  15.md  16.md  2.rst  2.x.rst  3.rst  3.x.rst  4.rst  4.x.rst  5.rst  5.x.rst  6.rst  6.x.rst  7.rst  8.rst  9.rst
doc/source/reference/: full_text_search.rst  limitations.rst  optimizations.rst  server_variables.rst  sql_commands.rst  status_variables.rst  troubleshooting.rst  udf.rst
doc/source/tutorial/: installation_check.rst  mode.rst  storage.rst  tokenizer-list.inc  wrapper.rst
doc/source/userguide/: mroonga_snippet_example.inc  mroonga_snippet_storage.inc  mroonga_snippet_syntax.inc  mroonga_snippet_syntax.rst  mroonga_snippet_wrapper.inc  storage.rst  wrapper.rst
doc/themes/mroonga/: layout.html  theme.conf
lib/: Makefile.am  libmrn_need_mysql_sources.am  libmrn_no_mysql_sources.am  mrn_auto_increment_value_lock.cpp  mrn_auto_increment_value_lock.hpp  mrn_buffers.cpp  mrn_buffers.hpp  mrn_column_name.cpp  mrn_column_name.hpp  mrn_condition.cpp  mrn_condition.hpp  mrn_condition_converter.cpp  mrn_condition_converter.hpp  mrn_context_pool.cpp  mrn_context_pool.hpp  mrn_count_skip_checker.cpp  mrn_count_skip_checker.hpp  mrn_current_thread.hpp  mrn_database.cpp  mrn_database.hpp  mrn_database_manager.cpp  mrn_database_manager.hpp  mrn_database_repairer.cpp  mrn_database_repairer.hpp  mrn_debug_column_access.cpp  mrn_debug_column_access.hpp  mrn_encoding.cpp  mrn_encoding.hpp  mrn_external_lock.cpp  mrn_external_lock.hpp  mrn_field.cpp  mrn_field.hpp  mrn_field_normalizer.cpp  mrn_field_normalizer.hpp  mrn_field_offset_mover.cpp  mrn_field_offset_mover.hpp  mrn_grn.hpp  mrn_index_column_name.cpp  mrn_index_column_name.hpp  mrn_index_table_name.cpp  (+37 more)
src/: Makefile.am  driver.c  driver.h  ha_groonga.cc  ha_groonga.h  mgrntest.c  mroonga.h  scratch.c
test/: Makefile.am  run-sql-test.sh  run-test.sh  run-unit-test.sh  test-driver.c
test/sql/: Makefile.am  update-result-files.sh  update-test-files.sh
test/sql/groonga_include/: Makefile.am  groonga.inc  groonga_deinit.inc
test/sql/include/: Makefile.am  check_ha_mroonga_so.inc  groonga_deinit.inc  have_32bit.inc  have_64bit.inc  have_fractional_seconds.inc  have_fulltext_index_comment.inc  have_groonga.inc  have_inplace_index_change.inc  have_mariadb.inc  have_mroonga.inc  have_mroonga_deinit.inc  have_version_55.inc  have_version_56.inc  load_mroonga_functions.inc
test/sql/r/: Makefile.am  binlog.result  btree.result  count_performance.result  create_table.result  create_table_wrapper.result  delete.result  delete_wrapper.result  drop_database.result  drop_table.result  fulltext.result  fulltext_wrapper.result  hash.result  information_schema.result  insert.result  insert_wrapper.result  last_insert_grn_id.result  log_level.result  order_limit_performance.result  replace.result  select_all.result  select_pkey.result  select_secondary_key.result  show_create_table.result  show_table_status.result  update.result
test/sql/t/: Makefile.am  auto_increment.test  binlog.test  btree.test  count_performance.test  create_table.test  create_table_wrapper.test  delete.test  delete_wrapper.test  drop_database.test  drop_table.test  flush_logs.test  fulltext.test  fulltext_multiple_column_index_wrapper.test  fulltext_wrapper.test  hash.test  information_schema.test  insert.test  insert_wrapper.test  last_insert_grn_id.test  log_level.test  order_limit_performance.test  replace.test  select_all.test  select_pkey.test  select_secondary_key.test  show_create_table.test  show_table_status.test  tinyint.test  update.test  update_wrapper.test
test/unit/: Makefile.am  api-sample.c  api_sample.c  test-driver.c  test-start-stop.c  test_driver.c  test_mrn_path_mapper.cpp  test_mrn_sys.c  test_mrn_sys.cpp  test_mrnsys.c  test_start_stop.c
(+3598 files in other folders)
